--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>俺クレド</title>
+		<title>JetBrains IDE Supportを使ってみた</title>
 
 		<meta name="description" content="A framework for easily creating beautiful presentations using HTML">
 		<meta name="author" content="Hakim El Hattab">
@@ -42,125 +42,62 @@
 			<div class="slides">
 				<section data-markdown data-separator="^\n---$" data-vertical="^\n>>>$">
 					<script type="text/template">
-					## 俺クレド
-					〜reveal.jsが使いたいだけ〜
-
-					高倉 啓史
+					## JetBrains IDE Support
+					を使ってみた
 
 					---
 					## 自己紹介
 					- 高倉啓史(ゴエモン)
-					- プロダクトマーケティング部
+					- テクノロジーソリューションチーム
 					- 2013/04/01 入社(0期生)
+					- IntelliJ歴 ２ヶ月
 
 					---
-					## とりあえずDISC
-					<img src="img/disc.png" style="width: 700px; height: 480px;"/>
-
-					(ストレングス・ファインダーはよく覚えてない)
+					## よくあること
+					<img src="img/fuck_chrome.png" style="width: 700px; height: 480px;"/>
 
 					---
-					## 家族構成
-					- 父(ビートルズおたく)
-					- 母(韓流おたく)
-					- 自分
-					- 姉(V系おたく？)
+					## 邪魔
+					<img src="img/n_chrome.png" style="width: 700px; height: 480px;"/>
 
 					---
-					## 割とおたくよりな家族
-					ものは大事にしろと幼少期の頃によくいわれた
+					## JSのデバックをしたいけど…
+					- アプリ画面は広く見たい
+					- 作業画面は一つのモニターでやりたい
+					- IntelliJのDebug画面（左下辺り）での確認がしたい
 
 					---
-					## 〜小学生
-					<img src="img/zelda.png" style="width: 250px; height: 200px;"/>
-					<img src="img/remingusu.jpg" style="width: 250px; height: 200px;"/>
-					<img src="img/myst.png" style="width: 250px; height: 200px;"/>
-					<img src="img/windows95.jpg" style="width: 250px; height: 200px;"/>
-					<img src="img/sex-machineguns.jpg" style="width: 250px; height: 200px;"/>
-					<img src="img/hayasibara.jpg" style="width: 250px; height: 200px;"/>
+					## そこでJetBrains IDE Support
+					<img src="img/ide_support.png" style="width: 700px; height: 480px;"/>
 
 					---
-					## ほとんどが家族の影響
-					ゲームとか…音楽とか…
-
-					ネットは小学生後半ぐらいから
-
-					---
-					## 中学生〜高校生
+					## JetBrains IDE Supportとは
+					- JetBrainsが提供しているChromeプラグイン
+					- ブラウザの挙動を拾ってくれたりする
+					- コード変更をブラウザに伝えたりしてくれる(LiveEdit)
 
 					---
-					## いろいろ経験して理解した
-					- オンラインゲーム全般(CGI〜MMO〜Xbox360)
-					- ネットで色々遊ぶ(同期10人で提示版借りてたとか)
-					- ゲーセン巡り
-					- 割と流行りものが嫌い(天邪鬼)
-						- これは後々いろいろと響く事に…
-					- 真面目に吹奏楽をやってた筈だがあんまり覚えてないぞ
+					## 入れてみた
+					<img src="img/ni_chrome.png" style="width: 700px; height: 480px;"/>
 
 					---
-					## 大学生
-					<img src="img/yamano.jpg" style="width: 500px; height: 350px;"/>
-					<img src="img/susi.png" style="width: 400px; height: 350px;"/>
+					## デモ
+					- C側メッセージ
 
 					---
-					## 部活とバイトの日々
-					- 部室に入り浸る
-					- 音源探しにCD屋めぐり
-						- 金を出せば手に入るというのは幸せな事だと気づく
-					- 割と体育会系よりな部活
-						- 先輩とのコミュニケーションとかを学ぶ
+					## 良い
+					<img src="img/nice_chrome.png" style="width: 700px; height: 480px;"/>
 
 					---
-					## 就職
+					## 感想
+					- サーバー側のデバックとほぼ同感覚で使える
+					- 画面が広いと良い
+					- ちょっと、遅い
+					- まだ秘めたる力がある気がする
 
 					---
-					## は、全然決まらなかった
-					- 人と話すのが好きじゃない
-					- 面接つらい
-					- メンタル弱い
-
-					---
-					## 負のスパイラル
-					<img src="img/yabee.jpg" style="width: 500px; height: 400px;"/>
-
-					就活二年目突入
-
-					---
-					## そんな中この人と出会う
-					<img src="img/god.jpg" style="width: 300px; height: 400px;"/>
-
-					妹さんと自分が大学の同期
-
-					---
-					## 無事内定(03/28)
-					- 内定もらって4日後に初出社
-					- 正直ベンチャーはよくわからないが面白そうだった
-						- 大学柄なのかベンチャー情報があまり入ってこない
-						- 周りにベンチャーへ行った人が皆無
-						- ビズリーチを知れて良かったとほんとに思ってます
-
-					---
-					## その後or続き
-					- BizreachWomanやった
-					- クーポン作った
-					- 3代目マーケエンジニアになった
-
-					---
-					## 俺クレド
-
-					---
-					1. ### 自分を知る事から始めよう
-					2. ### 昨日の自分を殴りに行く
-
-					---
-					<img src="img/ore-aoyama.png" style="width: 800px; height: 600px;"/>
-
-					---
-					## 使用したやつ
-					- reveal.js
-					- remotes.io
-					- github pages
-					- 作り方はむねおさんのブログを見れば良いと思う
+					## 使ってください
+					<img src="img/intellij.png" style="width: 1200px; height: 250px;"/>
 
 					---
 					## ありがとうございました
